网络模块出现问题

--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -6,28 +6,29 @@
  */
 
  html {
-    /*标准字体大小设置 14 像素「rem 参照对象」*/
-    font-size: 14px;
-    /*滚动事件发生在 html 元素上；JS 中可以监听 html 的滚动*/
-    overflow-y: auto;
-    /*让 html 和浏览器窗口高度一致*/
-    height: 100%;
-    /*少数浏览器默认背景色为浅灰色，所以设置默认背景颜色为纯白*/
-    background-color: #fff;
-  }
+  /*标准字体大小设置 14 像素「rem 参照对象」*/
+  font-size: 14px;
+  /*滚动事件发生在 html 元素上；JS 中可以监听 html 的滚动*/
+  overflow-y: auto;
+  /*让 html 和浏览器窗口高度一致*/
+  height: 100%;
+  /*少数浏览器默认背景色为浅灰色，所以设置默认背景颜色为纯白*/
+  background-color: #fff;
+} 
   
-  html,
-  body {
-    /*body 宽度大 html 度时，某些浏览器会出现内部滚动条；所以设置「html、body」宽度相同且「overflow-x: hidden」*/
-    overflow-x: hidden;
-    width: 100%;
-    /*取消部分浏览器点击有阴影*/
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    /*优化移动端滚动事件*/
-    -webkit-overflow-scrolling: touch;
-    /* overflow-scrolling: touch; */
-  }
-  
+html,
+body {
+  /*body 宽度大 html 度时，某些浏览器会出现内部滚动条；所以设置「html、body」宽度相同且「overflow-x: hidden」*/
+  /* overflow-x: hidden;  添加不显示navbar下面分割线*/
+  width: 100%;
+  /*取消部分浏览器点击有阴影*/
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  /*优化移动端滚动事件*/
+  -webkit-overflow-scrolling: touch;
+  /* overflow-scrolling: touch; */
+}
+
+
   body {
     /*设置基本字体配置*/
     font: 1rem 'Helvetica Neue', Helvetica, 'PingFang SC', 'Hiragino Sans GB', 'Microsoft Yahei', Arial, sans-serif;
@@ -151,12 +152,12 @@
   a {
     text-decoration: none;
   }
-  
+
   ol,
   ul {
     /*开发中 UI 设计的列表都是和原生的样式差太多，所以直接给取消 ol，ul 默认列表样式*/
     list-style: none;
-  }
+  } 
   
   button,
   input[type='submit'],
